--- a/doc/web/templates/default.html
+++ b/doc/web/templates/default.html
@@ -24,7 +24,7 @@
   <div class="inner">
     <h1><a href="{{ page.rooturl }}/index.html">{{ site.app.name }}</a></h1>
     <h2>Check websites for broken links</h2>
-    <a href="https://github.com/wummel/linkchecker"
+    <a href="https://github.com/linkcheck/linkchecker"
      class="button"><small>View project on</small> GitHub</a>
   </div>
 </header>
@@ -39,7 +39,7 @@
 <aside id="sidebar">
 <h2>Downloads</h2>
 <p>
-<a href="http://wummel.github.io/{{site.app.lname}}/dist/{{site.app.name}}-{{site.app.version}}.exe"
+<a href="http://linkcheck.github.io/{{site.app.lname}}/dist/{{site.app.name}}-{{site.app.version}}.exe"
   title="Download Windows .exe installer"
   class="button"><span>{{site.app.name}}-{{site.app.version}}.exe</span></a>
 <a href="http://ftp.debian.org/debian/pool/main/l/{{site.app.lname}}/"
@@ -49,10 +49,10 @@
   title="Download Source .tar.gz package"
   class="button"><span>{{site.app.name}}-{{site.app.version}}.tar.gz</span></a>
 </p>
-<p><a href="https://github.com/wummel/{{site.app.lname}}/blob/master/doc/changelog.txt">Changelog</a></p>
-<p class="repo-owner"><a href="https://github.com/wummel/{{site.app.lname}}">{{site.app.name}}</a> is
+<p><a href="https://github.com/linkcheck/{{site.app.lname}}/blob/master/doc/changelog.txt">Changelog</a></p>
+<p class="repo-owner"><a href="https://github.com/linkcheck/{{site.app.lname}}">{{site.app.name}}</a> is
 maintained
-by <a href="https://github.com/wummel">{{site.app.maintainer}}</a>.</p>
+by <a href="https://github.com/linkcheck">{{site.app.maintainer}}</a>.</p>
 <h2>Give back</h2>
 <p>
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
@@ -68,7 +68,7 @@ by <a href="https://github.com/wummel">{{site.app.maintainer}}</a>.</p>
 
 <h2>Support</h2>
 <p>
-<a href="https://github.com/wummel/linkchecker/issues?state=open">Issue&nbsp;tracker</a><br/>
+<a href="https://github.com/linkcheck/linkchecker/issues?state=open">Issue&nbsp;tracker</a><br/>
 </p>
 
 <h2>Documentation</h2>
